Fix spinner visible logic when chart image loading

--- a/src/components/StockInfoDisplayable.scss
+++ b/src/components/StockInfoDisplayable.scss
@@ -1,8 +1,25 @@
-.spinner {
-  display: flex;
-  min-height: 200px;
-  justify-content: center;
-  align-items: center;
+.img-wrap {
+  width: 100%;
+  padding-top: 41%;
+  position: relative;
+  .chart {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
+  .spinner {
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    // min-height: 200px;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .info-head {
